<resources>
    <string name="app_name">TONSORIAL</string>
    <string name="about">About</string>
    <string name="barbers">Barbers</string>
    <string name="services">Services</string>
    <string name="product">Product</string>
    <string name="contact">Contact</string>
    <string name="event">Event</string>
    <string name="navdrawopen">Open</string>
    <string name="navdrawclose">Close</string>
    <string name="book_appointment">BOOK APPOINTMENT</string>
    <string name="luis">Luis</string>
    <string name="geraldo">Geraldo</string>
    <string name="justin">Justin</string>
    <string name="samy">Samy</string>
    <string name="shopaboutstory">I remember those old-fashioned barber shops, the ones where everyone was welcome. You could hear stories about people who made it to the top, never just a place to get your haircut, rather, filled with conversation and good memories. I spent most of my childhood in one. When life threw-out and the day would go wrong, the barber shop was a place that made me feel strong - a place where everyone shares an experience. It\'s places like this, I love the most.</string>
    <string name="text">Text</string>
    <string name="call">Call</string>
    <string name="phonenumber">+1(347) 645 6386</string>
    <string name="phonetv">Phone</string>
    <string name="Address">32–86 Steinway St, Long Island City NY, 11103</string>
    <string name="AdressTV">Address</string>
    <string name="contact_us">Contact Us</string>
    <string name="cashonly">Cash only All sales are final</string>
    <string name="kidshaircut">Kids Haircut \n(12 and under)</string>
    <string name="buzz_cut">Buzz Cut</string>
    <string name="classic_cut">Classic Cut</string>
    <string name="_60">$60</string>
    <string name="senior_haircut">Senior Haircut</string>
    <string name="cut_amp_shave_or_beard_cut"><![CDATA[Cut & Shave or \nBeard Cut]]></string>
    <string name="traditional_shave">Traditional Shave</string>
    <string name="_30">$30</string>
    <string name="cuts">Cuts</string>
    <string name="_20">$20</string>
    <string name="_40">$40</string>
    <string name="_25">$25</string>
    <string name="shaves">Shaves</string>
    <string name="_25_n">$25</string>
    <string name="about_us">About us</string>
    <string name="tuesday">Tuesday</string>
    <string name="_10am_8pm">10am - 8pm</string>
    <string name="sunday">Sunday</string>
    <string name="photos">Photos</string>
    <string name="_11am_7pm">11am - 7pm</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="monday">Monday</string>
    <string name="hours">Hours</string>
    <string name="aboutPic1TOPDescription">Picture of BarberShop Supplies on Table</string>
    <string name="contactPic1Map">Picture of Map Location of Tonsorial barber shop</string>
    <string name="twitter_icon_link">Twitter Icon Link</string>
    <string name="instagram_icon_link">Instagram Icon Link</string>
    <string name="facebook_icon_link">Facebook Icon Link</string>
    <string name="homePic1Background">Background Imgae of Tonsorial BarberShop</string>
    <string name="homePIC2Icon">Icon Image of Tonorial</string>
    <string name="Product_products">Products</string>
    <string name="Products_matte_cream">Matte Cream</string>
    <string name="Events_open_events">Open Events</string>
    <string name="goBack">Back</string>
    <string name="barber_luis">Barber Luis</string>
    <string name="barber_geraldo">Barber Geraldo</string>
    <string name="barber_justin">Barber Justin</string>
    <string name="barber_samy">Barber Samy</string>
    <string name="Proudct_layrite">LAYRITE</string>
    <string name="Product_mrnatty">MRNATTY</string>
    <string name="Proeuct_original">Original</string>
    <string name="Proeuct_super_hold">Super Hold</string>
    <string name="Proeuct_LayriteOGDescription">The water based pomade with a vanilla scent that started it all. Our original pomade holds and smells fresh all day, yet rinses out easily with water</string>
    <string name="Proeuct_SuperHoldeDesc">An incredible water - based pomade that gives you ultimate control and superb hold for the most demanding, challenging and difficult to manage hair.</string>
    <string name="_18">$18</string>
    <string name="Proeuct_matteCreamDesc">A lightweight, water - based shaping cream that adds texture to flexible, all day hold for a range of styles for easy and laid back to more defined.</string>
    <string name="Proeuct_lay1Desc">Layrite Original product</string>
    <string name="Proeuct_layrite2Desc">Layrite Super Hold Product</string>
    <string name="Proeuct_layrite3Desc">Layrite Matte Cream product</string>
    <string name="Barbers_photo_of_barbers_description">Photo of Barbers</string>
    <string name="image_of_barberx">Image of Barber</string>
    <string name="defaulttext">Banner picture of menu</string>
    <string name="picture_of_barber">Picture of Barber</string>
    <string name="profile_appointmenttime">Picture of working hours of Barber</string>
    <string name="biography">Biography</string>
    <string name="profile">Profile</string>

    <string name="profileluisbio">Since he was 12, cutting hair was a hobby Luis enjoyed. Six years later, Luis’ found himself working alongside the most elite barbershops in the Tri-State area. His hobby quickly turned into his passion, giving him the opportunity to open up his own barbershop, in Queens. Luis envisions his barbershop becoming the finest barbershop in NYC by providing high-quality service and the best possible experience for his clients.</string>
    <string name="profilegeraldobio">Born and raised in the islands of the Dominican Republic, Geraldo growing up would give haircuts to friends, families and even earned a Bachelor\'s Degree of arts. Geraldo enjoys going back to his roots in the Dominican Republic and visiting the many rivers and beaches on the island. To Geraldo, being a barber is an art form and with 23 years of experience his art speaks for itself.</string>
    <string name="profilesamybio">Samy believes that when doing a job it should come from the heart, and with the grace of God. He was recently added to the Tonsorial LIC team and has been exceeded expectations and not a surprise with over 22 years of experience. Samy loves spending time with his family and also enjoys baseball.</string>
    <string name="profilejustinbio">At the age of 18, Justin was fresh out of High School exploring his next step in life. In a search for a job he wound up at LIC Tonsorial working as a cashier for his uncle Luis. Justin helped clean and complete tasks around the shop. As time passed by Justin would observe and learn from his uncle and fellow barbers the art of cutting hair. Not long after Justin began cutting hair and beginning his own journey as a barber. During this spare time, Justin likes to take road trips with his friends and see the beauties of nature. Justin is a big fan of his own city, and supports many local community events.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
