<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:title="Home">
        </item>

        <item android:id="@+id/about"
            android:title="@string/about">
        </item>

        <item android:id="@+id/barbers"
            android:title="@string/barbers">
        </item>

        <item android:id="@+id/services"
            android:title="@string/services">
        </item>

        <item android:id="@+id/product"
            android:title="@string/product">
        </item>

        <item android:id="@+id/contact"
            android:title="@string/contact">
        </item>

        <item android:id="@+id/event"
            android:title="@string/event">
        </item>
    </group>
</menu>