<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_Services3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:fontFamily="@font/playball"
                android:text="@string/contact_us"
                android:textAlignment="center"
                android:textSize="36sp"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Services4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="0"
                android:fontFamily="@font/playball"
                android:text="@string/AdressTV"
                android:textAlignment="center"
                android:textSize="36sp"

                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivgooglemsp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/googlemap" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginVertical="10dp"
                android:layout_weight="0"
                android:text="@string/Address" />

            <TextView
                android:id="@+id/tv_Services5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="0"
                android:fontFamily="@font/playball"
                android:text="@string/phonetv"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="0"
                android:layout_marginVertical="10dp"
                android:text="@string/phonenumber" />

            <Button
                android:id="@+id/btn_callbarbershop"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/call" />

            <Button
                android:id="@+id/btn_textbarbershop"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/text" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>